--- a/p2/theme.css
+++ b/p2/theme.css
@@ -357,73 +357,13 @@ header img {
     float: right;
 }
 
-#scrollable form .strength0 {
+#scrollable form .strength {
     width: 244px;
     height: 24px;
     line-height: 24px;
     padding: 0 3px;
     border: solid 0.25px grey;
     background: #f5f5f5;
-    font-size: 8pt;
-    text-align: center;
-    box-sizing: border-box;
-}
-
-#scrollable form .strength1 {
-    width: 244px;
-    height: 24px;
-    line-height: 24px;
-    padding: 0 3px;
-    border: solid 0.25px grey;
-    background: linear-gradient(to right, #ff8b94 0%, #ff8b94 20%, #f5f5f5 20%, #f5f5f5 100%);
-    font-size: 8pt;
-    text-align: center;
-    box-sizing: border-box;
-}
-
-#scrollable form .strength2 {
-    width: 244px;
-    height: 24px;
-    line-height: 24px;
-    padding: 0 3px;
-    border: solid 0.25px grey;
-    background: linear-gradient(to right, #ffaaa5 0%, #ffaaa5 40%, #f5f5f5 40%, #f5f5f5 100%);
-    font-size: 8pt;
-    text-align: center;
-    box-sizing: border-box;
-}
-
-#scrollable form .strength3 {
-    width: 244px;
-    height: 24px;
-    line-height: 24px;
-    padding: 0 3px;
-    border: solid 0.25px grey;
-    background: linear-gradient(to right, #ffd3b6 0%, #ffd3b6 60%, #f5f5f5 60%, #f5f5f5 100%);
-    font-size: 8pt;
-    text-align: center;
-    box-sizing: border-box;
-}
-
-#scrollable form .strength4 {
-    width: 244px;
-    height: 24px;
-    line-height: 24px;
-    padding: 0 3px;
-    border: solid 0.25px grey;
-    background: linear-gradient(to right, #dcedc1 0%, #dcedc1 80%, #f5f5f5 80%, #f5f5f5 100%);
-    font-size: 8pt;
-    text-align: center;
-    box-sizing: border-box;
-}
-
-#scrollable form .strength5 {
-    width: 244px;
-    height: 24px;
-    line-height: 24px;
-    padding: 0 3px;
-    border: solid 0.25px grey;
-    background: #a8e6cf;
     font-size: 8pt;
     text-align: center;
     box-sizing: border-box;
@@ -471,7 +411,7 @@ footer #usercount img {
     padding-left: 32px;
     margin-top: 10px;
     border: none;
-    font-size: 120%;
+    font-size: 14pt;
     background: #708090;
     color: white;
     text-decoration: none;
@@ -514,7 +454,7 @@ input[type="search"] {
     line-height: 40px;
     margin-top: 10px;
     text-align: center;
-    font-size: 150%;
+    font-size: 18pt;
     color: #36454f;
     text-decoration: none;
     display: inline-block;
@@ -530,7 +470,7 @@ input[type="search"] {
     width: 100%;
     height: 100px;
     margin-top: 10px;
-    font-size: 18pt;
+    font-size: 16pt;
     line-height: 100px;
     text-align: center;
     border: none;
@@ -570,7 +510,7 @@ input[type="search"] {
     height: 100px;
     line-height: 100px;
     text-align: center;
-    font-size: 16pt;
+    font-size: 14pt;
     color: white;
     background: #536878;
 }
@@ -630,14 +570,24 @@ input[type="search"] {
     cursor: pointer;
 }
 
-.match .edit .side0g, .match .edit .arrow0g {
-    position: relative;
-    left: -200px;
+.match .edit .side0g {
+    position: absolute;
+    left: 210px;
 }
 
-.match .edit .side1g, .match .edit .arrow1g {
-    position: relative;
-    right: -200px;
+.match .edit .arrow0g {
+    position: absolute;
+    left: 360px;
+}
+
+.match .remove .side1r {
+    position: absolute;
+    right: 10px;
+}
+
+.match .remove .arrow1r {
+    position: absolute;
+    right: 160px;
 }
 
 .match[name=bagmatch]:hover .edit {
@@ -646,6 +596,20 @@ input[type="search"] {
 
 .match[name=bagmatch]:hover .remove {
     opacity: 1;
+}
+
+.betdetails {
+    width: 100%;
+    height: 0px;
+    margin-top: 0;
+    font-size: 10pt;
+    line-height: 20px;
+    text-align: center;
+    border: none;
+    border-radius: 0 0 10px 10px;
+    background: #36454f;
+    color: white;
+    overflow: hidden;
 }
 
 .error {
