--- a/p3/theme.css
+++ b/p3/theme.css
@@ -559,7 +559,7 @@ input[type="search"] {
     overflow: hidden;
 }
 
-button[id=upcoming_more], button[id=latest_more] {
+button[id$=_more] {
     width: 100%;
     height: 40px;
     margin-top: 10px;
@@ -577,18 +577,18 @@ button[id=upcoming_more], button[id=latest_more] {
     transition: 0.5s;
 }
 
-button[id=upcoming_more]:hover, button[id=latest_more]:hover {
+button[id$=_more]:hover {
     background: #36454f;
 }
 
-button[id=upcoming_more] span, button[id=latest_more] span {
+button[id$=_more] span {
     cursor: pointer;
     display: inline-block;
     position: relative;
     transition: 0.5s;
 }
 
-button[id=upcoming_more] span:after, button[id=latest_more] span:after {
+button[id$=_more] span:after {
     content: 'More';
     position: absolute;
     opacity: 0;
@@ -599,11 +599,11 @@ button[id=upcoming_more] span:after, button[id=latest_more] span:after {
     vertical-align: middle;
 }
 
-button[id=upcoming_more]:hover span, button[id=latest_more]:hover span {
+button[id$=_more]:hover span {
   padding-right: 60px;
 }
 
-button[id=upcoming_more]:hover span:after, button[id=latest_more]:hover span:after {
+button[id$=_more]:hover span:after {
   opacity: 1;
   right: 0;
 }
